--- a/CRUD_NP_PracticeCMS/Views/Shared/_Layout.cshtml
+++ b/CRUD_NP_PracticeCMS/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Candidate" asp-action="Index">Candidate</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Candidate" asp-action="Index">Apply Candidates</a>
                         </li>
                     </ul>
                 </div>
