--- a/CRUD_NP_PracticeCMS/Views/Candidate/Index.cshtml
+++ b/CRUD_NP_PracticeCMS/Views/Candidate/Index.cshtml
@@ -1,6 +1,34 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<h2>Candidate</h2>
+﻿
+<html>
+    <body>
+    <div class="container">
+        <label>First Name</label>
+        <input type="text" id="fname" />
+        <br />
+        <label>Last Name</label>
+        <input type="text" id="lname" />
+        <br />
+        <lable>Email</lable>
+        <input type="email" id="email" />
+        <br />
+        <lable>Mobile</lable>
+        <input type="number" id="mobile"/>
+        <br />
+        <lable>Gender</lable>
+        <label>
+            <input type="radio" name="gender" value="male">
+            Male
+        </label>
+
+        <label>
+            <input type="radio" name="gender" value="female">
+            Female
+        </label>
+
+        <label>
+            <input type="radio" name="gender" value="other">
+            Other
+        </label>
+    </div>
+    </body>
+</html>
